tests/reference/asr-test_assign4-a2136e0.stderr
semantic error: Assigning integer to float is not supported
 --> tests/errors/test_assign4.py:5:9
  |
5 |     f = x
  |         ^ 
